<resources>
    <string name="app_name">RememHub</string>
    <string name="titulo_de_tarea">Título de tarea</string>
    <string name="descripcion">Descripción</string>
    <string name="categoria">Categoría</string>
    <string name="seleccionar_hora">Seleccionar Hora</string>
    <string name="seleccionar_fecha">Seleccionar Fecha</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar tarea</string>
    <string name="completada">Completada</string>
    <string name="seleccionar_tarea">Seleccionar Tarea</string>
    <string name="sonido">Sonido</string>
    <string name="notificaci_n_extraordinaria">Notificación extraordinaria</string>
    <string name="_5_minutos_antes_default">5 minutos antes (Default)</string>
    <string name="vibraci_n">Vibración</string>
    <string name="_5_minutos_antes">5 minutos antes</string>
    <string name="_15_minutos_antes">15 minutos antes</string>
    <string name="_30_minutos_antes">30 minutos antes</string>
    <string name="_1_hora_antes">1 hora antes</string>
    <string name="_2_horas_antes">2 horas antes</string>
    <string name="fecha">Fecha</string>
    <string name="buscar">Buscar</string>
    <string name="title_action_bar">Menú</string>
    <string name="txt1">Añadir Tarea</string>
    <string name="txt2">Detalle de tarea</string>
    <string name="txt3">Historial</string>
    <string name="txt4">Categorías</string>
    <string name="txt5">Papelera</string>
    <string name="txt6">Configuración</string>
    <string name="txt7">Resumen</string>
    <string name="menu_icon">icono</string>
    <string name="txt9">En proceso</string>
    <string name="txtmensajee">No hay tareas para esta semana</string>
    <string name="txtmensajes">Siguiente semana</string>
    <string name="txtbutton">Menú</string>
    <string name="mensaje">No hay tareas para la siguiente semana</string>
    <string name="texto">Esta semana</string>
    <string name="todo2" translatable="false">todo2</string>
    <string name="dias_de_recordatorio">Dias de Recordatorio</string>
    <string name="todo3" translatable="false">todo3</string>
    <string name="hora_de_recordatorio">Hora de recordatorio</string>
    <string name="configurar_recordatorio">Configurar Recordatorio</string>
    <string name="todo" translatable="false">todo</string>
    <string name="fecha_de_tarea">Fecha de tarea</string>
    <string name="descripcion_opcional">Descripcion(opcional)</string>
    <string name="titulo_de_la_tarea">Titulo de la tarea</string>
    <string name="a_adir_una_nueva_tarea">Añadir una nueva tarea</string>
    <string name="todo4" translatable="false">TODO</string>
    <string name="todo6" translatable="false">TODO</string>
    <string name="menu_nuevo">Nueva Categoria</string>
    <string name="txtFuturas">Tareas Futuras</string>
    <string name="mensajeFuturas">No tienes tareas programadas para fechas futuras.</string>
    <string name="txtExpiradas">Tareas Expiradas</string>
    <string name="mensajeExpiradas">No tienes tareas expiradas.</string>
    <string name="mensajeProximas">No hay tareas para esta semana.</string>
    <string name="txtProximas">Tareas Próximas</string>
    <string name="detalle_de_tarea">Detalle de Tarea</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="hora">Hora</string>
    <string name="escribe_algo_aqu">Escribe algo aquí</string>
    <string name="editar_categoria">Editar Categoria</string>
    <string name="configuracion">Configuracion</string>
    <string name="fecha_historial">Fecha</string>
    <string name="buscar_historial">Buscar</string>
    <string name="men">MENÚ</string>
    <string name="escribe_algo_aqui_newcat">Escribe algo aquí</string>
    <string name="agregar_categoria">Agregar Categoria</string>
    <string name="nueva_categoria">Nueva Categoria</string>
    <string name="vaciar_papelera">Vaciar Papelera</string>
    <string name="papelera">Papelera</string>
    <string name="detalles_de_la_tarea">Detalles de la tarea</string>
    <string name="todas_las_tareas">Todas las tareas</string>
    <string name="filtrar_por_categor_a">Filtrar por categoría</string>
    <string name="resumen">Resumen</string>
    <string name="seleciones_una_opcion">Selecione una opcion</string>
    <string name="cancelar_tarea">Cancelar</string>
    <string name="guardar_tarea">Guardar</string>
    <string name="hora_tarea">hora</string>
    <string name="categorias">Categorias</string>
    <string name="eliminar_tarea">Eliminar</string>
    <string name="categor_a_x">Categoría X</string>
    <string name="lun_mar_mi">Lun, Mar, Mié</string>
    <string name="dd_mm_yyyy">DD, MM, YYYY</string>
    <string name="tarea_x">Tarea X</string>
    <string name="eliminar_tarea_papelera">Eliminar</string>
    <string name="restaurar">Restaurar</string>
    <string name="categor_a_x_papelera">Categoría X</string>
    <string name="lun_mar_mi_papelera">Lun, Mar, Mié</string>
    <string name="dd_mm_yyyy_papelera">DD, MM, YYYY</string>
    <string name="tarea_x_papelera">Tarea X</string>
    <string name="categor_a_1">Categoría 1</string>
    <string name="dd_mm_yyyy_item">DD/MM/YYYY</string>
    <string name="tarea_1">Tarea 1</string>
    <string name="error_al_actualizar">Error al Actualizar</string>
    <string name="selecciona_al_menos_un_d_a">Selecciona al menos un día</string>
    <string name="error_al_obtener_la_categor_a_seleccionada">Error al obtener la categoría seleccionada</string>
    <string name="tarea_editada_con_xito">Tarea editada con éxito</string>
    <string name="la_fecha_de_cumplimiento_no_puede_ser_anterior_a_la_fecha_actual">La fecha de cumplimiento no puede ser anterior a la fecha actual</string>
    <string name="categoria_actualizada">Categoria Actualizada</string>
    <string name="el_campo_no_puede_estar_vacio">El campo no puede estar vacio</string>
    <string name="el_nombre_de_la_categor_a_no_puede_estar_vac_o">El nombre de la categoría no puede estar vacío</string>
    <string name="categor_a_agregada">Categoría Agregada</string>
    <string name="error_al_guardar_la_categor_a">Error al guardar la Categoría</string>
    <string name="la_papelera_est_vac_a">La papelera está vacía</string>
    <string name="papelera_vaciada">Papelera vaciada</string>
    <string name="tarea_restaurada">Tarea restaurada</string>
    <string name="tarea_eliminada_permanentemente">Tarea eliminada permanentemente</string>
    <string name="categoria_eliminada">Categoria Eliminada</string>
    <string name="tarea_guardada_con_id">"Tarea guardada con ID: "</string>
    <string name="error_al_guardar_tarea">Error al guardar tarea</string>
    <string name="por_favor_completa_todos_los_campos">Por favor, completa todos los campos</string>
    <string name="error_en_el_formato_de_fecha_o_hora">Error en el formato de fecha o hora</string>
    <string name="error_al_programar_notificaci_n_de_cumplimiento">Error al programar notificación de cumplimiento</string>
    <string name="selecciona_los_d_as_de_recordatorio">Selecciona los días de recordatorio</string>
    <string name="aceptar">Aceptar</string>
    <string name="eliminar_permanentemente">Eliminar permanentemente</string>
    <string name="seguro_que_quieres_eliminar_esta_tarea_permanentemente">¿Seguro que quieres eliminar esta tarea permanentemente?</string>
    <string name="recordatorio_final_de_tarea">"Recordatorio Final de Tarea: "</string>
    <string name="desea_eliminar_esta_categoria">Desea Eliminar esta Categoria</string>
    <string name="si">Si</string>
    <string name="no">NO</string>
    <string name="est_seguro_de_que_desea_mover_esta_tarea_a_la_papelera">¿Está seguro de que desea mover esta tarea a la papelera?</string>
    <string name="confirmaci_n">Confirmación</string>
    <string name="sin_categor_a">Sin categoría</string>
    <string name="la_tarea_se_ha_movido_a_la_papelera">La tarea se ha movido a la papelera</string>
    <string name="error_al_mover_la_tarea">Error al mover la tarea</string>
    <string name="tarea_guardada_con_exito">Tarea guardada con exito.</string>
    <string name="error_al_vaciar_papelera">Error al vaciar papelera</string>
    <string name="error_al_restaurar">Error al restaurar</string>
    <string name="completadas">Completadas</string>
    <string name="sin_completar">Sin completar</string>
    <string name="tareas_completadas">"Tareas completadas: "</string>
    <string name="tareas_incompletas">", Tareas incompletas: "</string>
    <string name="no_se_encontr_la_categor_a">"No se encontró la categoría: "</string>

</resources>