<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nueva_categoria"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_algo_aqui_newcat"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnguardarCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_categoria" />
</LinearLayout>
