<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_tarea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingTop="20dp"
    android:paddingRight="40dp"
    android:paddingBottom="30dp"
    tools:context=".Anadirtarea">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/a_adir_una_nueva_tarea"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        tools:ignore="Autofill,VisualLintTextFieldSize"/>

    <EditText
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/titulo_de_la_tarea"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColorHint="#546E7A"
        android:layout_marginBottom="20dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripcion_opcional"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColorHint="#546E7A"
        android:layout_marginBottom="20dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <Spinner
        android:id="@+id/spCategorias"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:minHeight="48dp" />

        <TextView
            android:id="@+id/textViewFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/fecha_de_tarea"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,VisualLintTextFieldSize" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etFechaCumplimiento"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:contentDescription="@string/seleccionar_fecha"
            android:onClick="mostrarCalendario"
            app:srcCompat="@android:drawable/ic_menu_today"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etHoraCumplimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hora_tarea"
            android:backgroundTint="#3F51B5"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:onClick="mostrarHorario"
            app:srcCompat="@android:drawable/ic_menu_recent_history"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configurar_recordatorio"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spDias"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etHoraRecordatorio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hora_de_recordatorio"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />/>

        <ImageButton
            android:id="@+id/imageButtonreloj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:onClick="mostrarRecordatorio"
            app:srcCompat="@android:drawable/ic_menu_recent_history"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:onClick="Cancelar"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/guardar"
            android:onClick="Guardar"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
    </LinearLayout>

    </LinearLayout>

</ScrollView>