<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título de la vista -->
    <TextView
        android:id="@+id/tituloPapelera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/papelera"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <!-- TextView para mostrar los detalles de la tarea seleccionada -->
    <TextView
        android:id="@+id/textViewTareaPapelera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalles_de_la_tarea"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <!-- RecyclerView para mostrar las tareas en la papelera -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPapelera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Botón para vaciar la papelera -->
    <Button
        android:id="@+id/btnVaciarPapelera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vaciar_papelera" />

</LinearLayout>
