<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    style="@style/WhiteCardView"
    card_view:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkBoxTarea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:buttonTint="@color/colorAzul"
                android:checked="false"
                android:clickable="false"
                android:focusable="false" />

            <TextView
                android:id="@+id/textViewNombreTarea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tarea_x"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#0000FF"
                android:maxLines="2"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/textViewCategoriaTarea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categor_a_x"
                android:textSize="14sp"
                android:textColor="#0000FF"
                android:maxLines="1"
                android:ellipsize="end" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewFechaTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dd_mm_yyyy"
            android:textSize="14sp"
            android:textColor="#0000FF"
            android:paddingTop="4dp" />

        <!-- TextView para los días de recordatorio -->

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar_tarea"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="end"
            android:background="@android:color/transparent" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
